fixed the images with a gap in the grid

--- a/web/components/AboutPageComponents/AboutUsAbout/AboutUsAbout.module.css
+++ b/web/components/AboutPageComponents/AboutUsAbout/AboutUsAbout.module.css
@@ -96,6 +96,9 @@
   font-family: TypewriterBold;
   font-size: 20px;
 }
+.image span {
+  height: 100% !important;
+}
 
 @media only screen and (max-width: 1024px) {
   .container {
